[package]
name = "ogp-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
ab_glyph = "0.2.28"
anyhow = "1.0.89"
axum = "0.7.7"
glyph_brush_layout = "0.2.4"
image = "0.25.2"
imageproc = "0.25.0"
serde = { version = "1.0.210", features = ["derive"] }
shuttle-axum = "0.47.0"
shuttle-runtime = "0.47.0"
tokio = { version = "1.40.0", features = ["full"] }
